[package]
name = "pbjs-decompiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
biome_js_formatter = "0.1.0"
biome_js_parser = "0.1.0"
biome_js_syntax = "0.1.0"
clap = { version = "4.4.11", features = ["derive"] }
once_cell = "1.18.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
swc_atoms = "0.6.4"
swc_common = { version = "0.33.9", features = ["tty-emitter", "anyhow"] }
swc_ecma_ast = { version = "0.110.10", features = ["serde-impl"] }
swc_ecma_parser = "0.141.27"
thiserror = "1.0.50"
